Fix main.scss pointing to wrong font

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,7 +1,10 @@
 @font-face {
-    font-family: 'Roboto';
     font-display: auto;
-    src: local('Roboto'), url(https://fonts.gstatic.com/s/arvo/v9/rC7kKhY-eUDY-ucISTIf5PesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
+    font-family: 'Roboto', 'serif';
+    font-style: normal;
+    font-weight: 400, 600, 700;
+    src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v18/KFOmCnqEu92Fr1Mu4mxK.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 @import "custom";
